--- a/extension/options.html
+++ b/extension/options.html
@@ -8,5 +8,6 @@
 <body>
 <b>Custom tab names</b>
 <script src="options.js"></script>
+<a href="debugging.html" target="_blank">debugging information</a>
 </body>
 </html>
