Options page: list of custom names: empty list. Options page: menegement: destroy all groups button

--- a/extension/options.html
+++ b/extension/options.html
@@ -6,8 +6,11 @@
   <link rel="stylesheet" href="options.css">
 </head>
 <body>
-<b>Custom tab names</b>
-<script src="options.js"></script>
-<a href="debugging.html" target="_blank">debugging information</a>
+  <b id="custom_names">Custom tab names</b>
+  <b>Manage groups</b>
+  <p><button id="ungroup">ungroup all</button></p>
+  <b>Debugging, support and contributing</b>
+  <p><a href="debugging.html" target="_blank">debugging information</a></p>
+  <script src="options.js"></script>
 </body>
 </html>
