UI: minor typos

--- a/extension/debugging.html
+++ b/extension/debugging.html
@@ -10,7 +10,7 @@
   <p>If you are going to submit bugreport, please attache this debugging information to make me easy reproduce buggy behavior.</p>
   <p>You are free to <a href="mailto:a.michurin@gmail.com">mail me</a>,
   or <a href="https://github.com/michurin/chrome-extension-tab-gatherer" target="_blank">submit issue on GitHub</a>.</p>
-  <p class="red">Beware! Check "Tabs" section! It content information about all you currently opened tabs!
+  <p class="red">Beware! Check "Tabs" section! It contents information about all you currently opened tabs!
   Please close tabs that won't help to understand problem to avoid leaking of you private data.</p>
   <pre></pre>
 <script src="debugging.js"></script>
